# ort

ort-sys/: Cargo.toml  build.rs  dist.txt
ort-sys-old/: Cargo.toml  build.rs  dist.txt
ort-sys-old/src/internal/: dirs.rs
ort-sys/src/: lib.rs
ort-sys/src/internal/: mod.rs
