[package]
name = "ort-sys"
version = "2.0.0-rc.9"
edition = "2021"
links = "onnxruntime"

[features]
default = ["std"]
std = []
training = []
download-binaries = ["ureq", "tar", "flate2", "sha2", "zip"]
use_cocoapod = ["ureq", "tar", "flate2", "sha2", "zip"]
load-dynamic = []
copy-dylibs = []

disable-linking = []

cuda = []
tensorrt = []
openvino = []
onednn = []
directml = []
nnapi = []
coreml = []
xnnpack = []
rocm = []
acl = []
armnn = []
tvm = []
migraphx = []
rknpu = []
vitis = []
cann = []
qnn = []
webgpu = []
azure = []

[build-dependencies]
ureq = { version = "3", optional = true, default-features = false, features = [
    "native-tls",
    "socks-proxy",
] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
pkg-config = "0.3.30"
zip = { version = "2.2.3", optional = true }
